styles fix: enforce height on collapsed msg-view items (fixes #72)

--- a/ui/less/com/msg-view.less
+++ b/ui/less/com/msg-view.less
@@ -79,6 +79,7 @@
 .msg-view-collapsed {
   display: flex;
   width: 600px;
+  height: 35px;
   margin: 3px auto;
   cursor: pointer;
 
